# cosmic-cults

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  STANDARDS.md  Trunk.toml  biome.json  clippy.toml  cosmic-cults.yaml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rustfmt.toml  tsconfig.json
.cursor/: .dockerignore  .hadolint.yaml  Dockerfile  setup.sh
.cursor/rules/: 00-fundamentals.mdc  cosmic-dominion.mdc
.github/: copilot-instructions.md
.github/actions/agentic-issue-triage/: action.yml
.github/workflows/: ci.yml  wasm-demo.yml
.kiro/steering/: autonomous.md  product.md  tech.md
apps/mobile/: package.json  tsconfig.json
apps/web/: package.json  vite.config.ts
bevy-ai-toolkit/: README.md
bevy-ai-toolkit/src/: behavior_tree.rs  lib.rs  state_machine.rs  targeting.rs
bevy-combat/: Cargo.toml
bevy-combat/src/: components.rs  damage.rs  effects.rs  lib.rs
cosmic-cults/: Cargo.toml
cosmic-cults/examples/: basic_physics.rs  formations.rs  unit_spawning.rs
cosmic-cults/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  DESIGN.md  LORE.md  STATE.md  TESTING.md  conf.py  index.rst
docs/api/: index.rst  modules.rst
docs/development/: contributing.md
docs/getting-started/: installation.md  quickstart.md
docs/legacy/: Trunk.toml  index.html
docs/legacy/bevy-ai-toolkit/: Cargo.toml
game-ai/: Cargo.toml  README.md
game-ai/src/: behaviors.rs  cult_profiles.rs  decision.rs  integration_test.rs  lib.rs  states.rs  targeting.rs  types.rs
game-assets/: Cargo.toml
game-assets/src/: lib.rs  registry.rs
game-combat/: Cargo.toml
game-combat/src/: components.rs  damage.rs  effects.rs  lib.rs  plugin.rs  states.rs  systems.rs  targeting.rs  visuals.rs  xp.rs
game-physics/: Cargo.toml
game-physics/src/: collision.rs  components.rs  lib.rs  movement.rs  spatial.rs
game-runner/: Cargo.toml
game-runner/examples/: basic_physics.rs
game-runner/src/: main.rs
game-units/: Cargo.toml
game-units/src/: components.rs  formations.rs  leadership.rs  lib.rs  pathfinding_integration.rs  physics_integration.rs  selection.rs  spawning.rs  visuals.rs
game-world/: Cargo.toml
game-world/src/: fog.rs  lib.rs  map.rs  save_load.rs  spawning.rs  terrain.rs
memory-bank/: activeContext.md  progress.md
(+44 files in other folders)
