[workspace]
members = []
resolver = "2"

[workspace.package]
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-cosmic-cults"
homepage = "https://github.com/jbcom/rust-cosmic-cults"
keywords = ["game", "rts", "lovecraft", "bevy", "wasm"]
categories = ["games", "wasm"]

[workspace.dependencies]
# Core Bevy engine
bevy = { version = "0.16", default-features = false }

# To be added as crates are migrated
