[workspace]
members = ["game-world"]
resolver = "2"

[workspace.package]
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-cosmic-cults"
homepage = "https://github.com/jbcom/rust-cosmic-cults"
documentation = "https://github.com/jbcom/rust-cosmic-cults"
keywords = ["game", "rts", "lovecraft", "bevy", "wasm"]
categories = ["games", "wasm"]

[workspace.dependencies]
bevy = { version = "0.16", default-features = false }
glam = "0.30"
ahash = "0.8"
indexmap = "2.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
