[package]
name = "bevy-ai-toolkit"
version = "0.1.0"
authors = ["Jon Bogaty <jon@jonbogaty.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jbcom/rust-cosmic-cults"
homepage = "https://github.com/jbcom/rust-cosmic-cults"
documentation = "https://docs.rs/bevy-ai-toolkit"
description = "Generic AI systems for Bevy: state machines, behavior trees, utility AI, and targeting"
keywords = ["bevy", "ai", "game", "behavior-tree", "state-machine"]
categories = ["game-development", "game-engines"]
readme = "README.md"

[dependencies]
# Core Bevy engine (minimal features for AI systems)
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }

# Math and utilities
glam = "0.30"
smallvec = "1.15"

# Serialization for AI state persistence
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }

[features]
default = []

# Optional features for extended functionality
wasm = []
